[gd_scene load_steps=16 format=2]

[ext_resource path="res://UI/health + xp bar/health bar.png" type="Texture" id=1]
[ext_resource path="res://UI/health + xp bar/backbar.png" type="Texture" id=2]
[ext_resource path="res://UI/health + xp bar/xp bar.png" type="Texture" id=3]
[ext_resource path="res://UI/PlayerUI.gd" type="Script" id=4]
[ext_resource path="res://UI/Title.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Buttons/ChangeSceneBtn.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Buttons/QuitBtn.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/ui_theme.tres" type="Theme" id=8]
[ext_resource path="res://UI/Timer.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/LevelUp/UpgradeBtn.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Score.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/Buttons/FullScreen.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/Buttons/MouseControls.tscn" type="PackedScene" id=13]
[ext_resource path="res://UI/upgrade_theme.tres" type="Theme" id=14]
[ext_resource path="res://Music and Sounds/333040__christopherderp__videogame-menu-button-clicking-sound-11.wav" type="AudioStream" id=15]

[node name="PlayerUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 8 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Emptybar" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = -5.0
margin_right = 1024.0
margin_bottom = 177.0
rect_scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Healthbar" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = -5.0
margin_right = 1024.0
margin_bottom = 177.0
rect_scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XPbar" type="TextureRect" parent="."]
margin_left = 64.0
margin_top = -5.0
margin_right = 313.0
margin_bottom = 177.0
rect_scale = Vector2( 0.2, 0.15 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="PauseMenu" instance=ExtResource( 5 )]
margin_top = 18.0
margin_bottom = 34.0
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
margin_left = 129.5
margin_top = 50.0
margin_right = 190.5
margin_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeBtn" type="Button" parent="PauseMenu/VBoxContainer"]
margin_right = 61.0
margin_bottom = 17.0
text = "Resume"

[node name="MouseControlsBtn" parent="PauseMenu/VBoxContainer" instance=ExtResource( 13 )]
visible = false
margin_top = 21.0
margin_right = 88.0
margin_bottom = 45.0

[node name="FullScreenBtn" parent="PauseMenu/VBoxContainer" instance=ExtResource( 12 )]
visible = false
margin_top = 21.0
margin_right = 71.0
margin_bottom = 45.0

[node name="OptionsBtn" type="Button" parent="PauseMenu/VBoxContainer"]
margin_top = 21.0
margin_right = 61.0
margin_bottom = 38.0
text = "Options"

[node name="ChangeSceneBtn" parent="PauseMenu/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 42.0
margin_right = 61.0
margin_bottom = 59.0
text = "Main Menu"
next_scene_path = "res://Menus/MainMenu.tscn"

[node name="QuitBtn" parent="PauseMenu/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 63.0
margin_right = 61.0
margin_bottom = 80.0

[node name="Timer" parent="." instance=ExtResource( 9 )]
pause_mode = 1
anchor_left = 1.0
anchor_right = 1.0
margin_left = -41.0
margin_right = -1.0
align = 2

[node name="Score" parent="." instance=ExtResource( 11 )]
margin_left = 1.0
margin_right = 6.0
text = "0"

[node name="UpgradeScreen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 14 )
color = Color( 0, 0, 0, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="UpgradeScreen" instance=ExtResource( 5 )]
margin_top = 15.0
margin_bottom = 31.0
text = "Choose An Upgrade"

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -39.5
margin_right = 28.0
margin_bottom = 39.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeBtn1" parent="UpgradeScreen/VBoxContainer" instance=ExtResource( 10 )]
margin_right = 56.0
margin_bottom = 23.0

[node name="UpgradeBtn2" parent="UpgradeScreen/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 27.0
margin_right = 56.0
margin_bottom = 51.0

[node name="UpgradeBtn3" parent="UpgradeScreen/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 55.0
margin_right = 56.0
margin_bottom = 79.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="button_down" from="PauseMenu/VBoxContainer/ResumeBtn" to="." method="_on_button_down"]
[connection signal="button_up" from="PauseMenu/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_button_up"]
[connection signal="button_down" from="PauseMenu/VBoxContainer/OptionsBtn" to="." method="_on_button_down"]
[connection signal="button_up" from="PauseMenu/VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_button_up"]
[connection signal="button_down" from="PauseMenu/VBoxContainer/ChangeSceneBtn" to="." method="_on_button_down"]
[connection signal="button_down" from="PauseMenu/VBoxContainer/QuitBtn" to="." method="_on_button_down"]
[connection signal="button_down" from="UpgradeScreen/VBoxContainer/UpgradeBtn1" to="." method="_on_button_down"]
[connection signal="button_up" from="UpgradeScreen/VBoxContainer/UpgradeBtn1" to="." method="_on_UpgradeBtn_button_up" binds= [ 1 ]]
[connection signal="button_down" from="UpgradeScreen/VBoxContainer/UpgradeBtn2" to="." method="_on_button_down"]
[connection signal="button_up" from="UpgradeScreen/VBoxContainer/UpgradeBtn2" to="." method="_on_UpgradeBtn_button_up" binds= [ 2 ]]
[connection signal="button_down" from="UpgradeScreen/VBoxContainer/UpgradeBtn3" to="." method="_on_button_down"]
[connection signal="button_up" from="UpgradeScreen/VBoxContainer/UpgradeBtn3" to="." method="_on_UpgradeBtn_button_up" binds= [ 3 ]]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
